# graphiti-mcp

./: README.md  pyproject.toml
graphiti_core/cross_encoder/: gemini_reranker_client.py
graphiti_core/driver/: __init__.py
graphiti_core/llm_client/: gemini_client.py
mcp_server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp_server/config/: config.yaml
mcp_server/graphiti_core/: graphiti.py
mcp_server/graphiti_core/cross_encoder/: __init__.py
mcp_server/graphiti_core/embedder/: __init__.py
mcp_server/graphiti_core/llm_client/: __init__.py  gemini_client.py
mcp_server/graphiti_core/utils/maintenance/: edge_operations.py
mcp_server/src/: graphiti_mcp_server.py
mcp_server/src/config/: schema.py
mcp_server/src/services/: factories.py  queue_service.py
